--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.486.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "sonner": "^2.0.3",
     "tailwind-variants": "^1.0.0",
