--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-query": "^5.71.1",
     "antd": "^5.24.6",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.486.0",
     "react": "^19.0.0",
