--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.486.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
